; ModuleID = '/home/carl/AnghaBench/linux/drivers/hid/extr_hid-ortek.c_ortek_report_fixup.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hid/extr_hid-ortek.c_ortek_report_fixup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hid_device = type { i32 }

@.str = private unnamed_addr constant [56 x i8] c"Fixing up logical maximum in report descriptor (Ortek)\0A\00", align 1
@.str.1 = private unnamed_addr constant [59 x i8] c"Fixing up logical maximum in report descriptor (Skycable)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.hid_device*, i32*, i32*)* @ortek_report_fixup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @ortek_report_fixup(%struct.hid_device* %0, i32* %1, i32* %2) #0 {
  %4 = alloca %struct.hid_device*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store %struct.hid_device* %0, %struct.hid_device** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load i32*, i32** %6, align 8
  %8 = load i32, i32* %7, align 4
  %9 = icmp uge i32 %8, 56
  br i1 %9, label %10, label %25

10:                                               ; preds = %3
  %11 = load i32*, i32** %5, align 8
  %12 = getelementptr inbounds i32, i32* %11, i64 54
  %13 = load i32, i32* %12, align 4
  %14 = icmp eq i32 %13, 37
  br i1 %14, label %15, label %25

15:                                               ; preds = %10
  %16 = load i32*, i32** %5, align 8
  %17 = getelementptr inbounds i32, i32* %16, i64 55
  %18 = load i32, i32* %17, align 4
  %19 = icmp eq i32 %18, 1
  br i1 %19, label %20, label %25

20:                                               ; preds = %15
  %21 = load %struct.hid_device*, %struct.hid_device** %4, align 8
  %22 = call i32 @hid_info(%struct.hid_device* %21, i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str, i64 0, i64 0))
  %23 = load i32*, i32** %5, align 8
  %24 = getelementptr inbounds i32, i32* %23, i64 55
  store i32 146, i32* %24, align 4
  br label %45

25:                                               ; preds = %15, %10, %3
  %26 = load i32*, i32** %6, align 8
  %27 = load i32, i32* %26, align 4
  %28 = icmp uge i32 %27, 54
  br i1 %28, label %29, label %44

29:                                               ; preds = %25
  %30 = load i32*, i32** %5, align 8
  %31 = getelementptr inbounds i32, i32* %30, i64 52
  %32 = load i32, i32* %31, align 4
  %33 = icmp eq i32 %32, 37
  br i1 %33, label %34, label %44

34:                                               ; preds = %29
  %35 = load i32*, i32** %5, align 8
  %36 = getelementptr inbounds i32, i32* %35, i64 53
  %37 = load i32, i32* %36, align 4
  %38 = icmp eq i32 %37, 1
  br i1 %38, label %39, label %44

39:                                               ; preds = %34
  %40 = load %struct.hid_device*, %struct.hid_device** %4, align 8
  %41 = call i32 @hid_info(%struct.hid_device* %40, i8* getelementptr inbounds ([59 x i8], [59 x i8]* @.str.1, i64 0, i64 0))
  %42 = load i32*, i32** %5, align 8
  %43 = getelementptr inbounds i32, i32* %42, i64 53
  store i32 101, i32* %43, align 4
  br label %44

44:                                               ; preds = %39, %34, %29, %25
  br label %45

45:                                               ; preds = %44, %20
  %46 = load i32*, i32** %5, align 8
  ret i32* %46
}

declare dso_local i32 @hid_info(%struct.hid_device*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
